Fix typos in ConfigMap and deployment references for frontend-nginx configuration; change service type from NodePort to ClusterIP.

--- a/k8s/base/configmap/frontend-nginx-config.yaml
+++ b/k8s/base/configmap/frontend-nginx-config.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: frontend-ngnix-config
+  name: frontend-nginx-config
 data:
-  ngnix.conf: |
+  nginx.conf: |
     worker_processes auto;
 
     events {
