--- a/k8s/base/deployment/frontend-deploy.yaml
+++ b/k8s/base/deployment/frontend-deploy.yaml
@@ -22,7 +22,7 @@ spec:
       volumes:
         - name: nginx-configuration
           configMap:
-            name: frontend-ngnix-config
+            name: frontend-nginx-config
       containers:
         - name: examxv2-frontend
           image: "399600302704.dkr.ecr.ap-south-1.amazonaws.com/examxv2-evolution:Updated_Docker_file___Expose_p-20241010-095912-d771fcd"
@@ -39,27 +39,27 @@ spec:
           volumeMounts:  
             - name: nginx-configuration
               mountPath: /etc/nginx/nginx.conf
-              subPath: ngnix.conf
+              subPath: nginx.conf
           # livenessProbe:
           #   httpGet:
           #     path: /health
           #     port: 80
-          #   initialDelaySeconds: 60
-          #   periodSeconds: 10
-          #   timeoutSeconds: 60
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 30
+          #   timeoutSeconds: 10
           #   failureThreshold: 3
           # readinessProbe:
           #   httpGet:
-          #     path: /index.html
+          #     path: /health
           #     port: 80
-          #   initialDelaySeconds: 60
+          #   initialDelaySeconds: 10
           #   periodSeconds: 10
-          #   timeoutSeconds: 60
+          #   timeoutSeconds: 5
           #   failureThreshold: 3
           # startupProbe:
           #   httpGet:
           #     path: /health
           #     port: 80
-          #   failureThreshold: 6
+          #   failureThreshold: 30
           #   periodSeconds: 10
-          #   timeoutSeconds: 60
+          #   timeoutSeconds: 5
