--- a/k8s/base/service/frontend-svc.yaml
+++ b/k8s/base/service/frontend-svc.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: examxv2-frontend-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: examxv2-frontend
   ports:
