--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -41,9 +41,9 @@ patches:
       apiVersion: v1
       kind: ConfigMap
       metadata:
-        name: frontend-ngnix-config
+        name: frontend-nginx-config
       data:
-        ngnix.conf: |
+        nginx.conf: |
           worker_processes auto;
           worker_cpu_affinity auto;
           worker_rlimit_nofile 100000;
@@ -329,4 +329,4 @@ patches:
           }
     target:
       kind: ConfigMap
-      name: frontend-ngnix-config
+      name: frontend-nginx-config
