--- a/k8s/overlays/uat/kustomization.yaml
+++ b/k8s/overlays/uat/kustomization.yaml
@@ -43,9 +43,9 @@ patches:
       apiVersion: v1
       kind: ConfigMap
       metadata:
-        name: frontend-ngnix-config
+        name: frontend-nginx-config
       data:
-        ngnix.conf: |
+        nginx.conf: |
           worker_processes auto;
           worker_cpu_affinity auto;
           worker_rlimit_nofile 100000;
@@ -331,7 +331,7 @@ patches:
           }
     target:
       kind: ConfigMap
-      name: frontend-ngnix-config
+      name: frontend-nginx-config
   - patch: |-
       apiVersion: v1
       kind: Service
