--- a/.github/workflows/ci-cd-stg.yaml
+++ b/.github/workflows/ci-cd-stg.yaml
@@ -38,7 +38,6 @@ jobs:
         uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
-          fields: repo,message,commit,eventName,ref,workflow
           author_name: Deployment Security Alert 🚨
           mention: channel
           if_mention: always
@@ -124,8 +123,8 @@ jobs:
           IMAGE_TAG="stg-${SAFE_COMMIT_MSG}-${TIMESTAMP}-${COMMIT_ID:0:7}"
           
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_OUTPUT
-          echo "REPO_COMMIT_SHA=$COMMIT_ID" >> $GITHUB_ENV
-          echo "COMMIT_MESSAGE=$COMMIT_MSG" >> $GITHUB_ENV
+          echo "REPO_COMMIT_SHA=$COMMIT_ID" >> $GITHUB_OUTPUT
+          echo "COMMIT_MESSAGE=$COMMIT_MSG" >> $GITHUB_OUTPUT
           echo "Generated Image Tag: $IMAGE_TAG"
 
       - name: Cache Docker layers
@@ -158,15 +157,20 @@ jobs:
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
-      - name: Save image tag to file
+      - name: Save image tag and commit info to files
         run: |
           echo "${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:${{ steps.generate-tag.outputs.IMAGE_TAG }}" > frontend_image_tag.txt
+          echo "${{ steps.generate-tag.outputs.COMMIT_MESSAGE }}" > commit_message.txt
+          echo "${{ steps.generate-tag.outputs.REPO_COMMIT_SHA }}" > commit_sha.txt
 
-      - name: Upload frontend image tag file
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: frontend-image-tag
-          path: frontend_image_tag.txt
+          name: build-artifacts
+          path: |
+            frontend_image_tag.txt
+            commit_message.txt
+            commit_sha.txt
           if-no-files-found: error
 
       - name: Cleanup environment files
@@ -177,7 +181,6 @@ jobs:
         uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
-          fields: repo,message,commit,eventName,ref,workflow
           author_name: Docker Build Failure 🐳
           mention: ${{ github.actor }}
           if_mention: always
@@ -203,15 +206,17 @@ jobs:
           ref: 'main'
           fetch-depth: 0
           
-      - name: Download image tag files
+      - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: frontend-image-tag
+          name: build-artifacts
           path: .
 
-      - name: Set image tags as environment variables
+      - name: Set deployment variables from artifacts
         run: |
           echo "FRONTEND_IMAGE=$(cat frontend_image_tag.txt)" >> $GITHUB_ENV
+          echo "COMMIT_MESSAGE=$(cat commit_message.txt)" >> $GITHUB_ENV
+          echo "COMMIT_SHA=$(cat commit_sha.txt)" >> $GITHUB_ENV
 
       - name: Update deployment image tag in Kustomization
         run: |
@@ -223,7 +228,7 @@ jobs:
           git config --local user.email "hariharen@greatify.ai"
           git config --local user.name "Hariharen"
           git add k8s/overlays/stg/kustomization.yaml
-          git commit -m "Update image tags for stg deployment - ${{ env.COMMIT_MESSAGE }}"
+          git commit -m "Update image tags for stg deployment - ${COMMIT_MESSAGE}"
           git push origin main
 
       # - name: Push to protected branch
@@ -252,7 +257,6 @@ jobs:
         uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
-          fields: repo,message,commit,eventName,ref,workflow
           author_name: Frontend Deployment Success
           mention: channel
           if_mention: success
@@ -261,8 +265,11 @@ jobs:
           username: ExamX-V2-CICD
           text: |
             :rocket: *Frontend deployment to stg environment succeeded*         
-            *Pusher:* `${{ github.actor }}`   
-            *Commit:* `${{ env.COMMIT_MESSAGE }}`   
-            The changes have been successfully deployed to the staging environment. Please verify the deployment and conduct necessary tests.
+            
+            *Deployment by:* @${{ github.actor }}   
+            *Commit:* `${{ env.COMMIT_SHA }}`
+            *Commit Message:* `${{ env.COMMIT_MESSAGE }}`   
+            
+            @${{ github.actor }}, your changes have been deployed successfully to Staging.
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
