--- a/.github/workflows/ci-cd-stg.yaml
+++ b/.github/workflows/ci-cd-stg.yaml
@@ -119,7 +119,7 @@ jobs:
           COMMIT_ID=$(git rev-parse HEAD)
           # Extract commit message and make it safe for use in tags
           COMMIT_MSG=$(git log -1 --pretty=%B | tr -d '\n' | cut -c1-50)
-          SAFE_COMMIT_MSG=$(echo "$COMMIT_MSG" | sed -e 's/[^a-zA-Z0-9]/_/g' | cut -c1-30)
+          SAFE_COMMIT_MSG=$(printf '%s' "$COMMIT_MSG" | sed -e 's/[^a-zA-Z0-9]/_/g' | cut -c1-30)
           IMAGE_TAG="stg-${SAFE_COMMIT_MSG}-${TIMESTAMP}-${COMMIT_ID:0:7}"
           
           printf 'IMAGE_TAG=%s\n' "$IMAGE_TAG" >> $GITHUB_OUTPUT
@@ -159,10 +159,15 @@ jobs:
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
       - name: Save image tag and commit info to files
+        env:
+          IMAGE_TAG: ${{ steps.generate-tag.outputs.IMAGE_TAG }}
+          COMMIT_MESSAGE: ${{ steps.generate-tag.outputs.COMMIT_MESSAGE }}
+          REPO_COMMIT_SHA: ${{ steps.generate-tag.outputs.REPO_COMMIT_SHA }}
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
-          printf '%s\n' "${{ steps.login-ecr.outputs.registry }}/examxv2-frontend:${{ steps.generate-tag.outputs.IMAGE_TAG }}" > frontend_image_tag.txt
-          printf '%s\n' "${{ steps.generate-tag.outputs.COMMIT_MESSAGE }}" > commit_message.txt
-          printf '%s\n' "${{ steps.generate-tag.outputs.REPO_COMMIT_SHA }}" > commit_sha.txt
+          printf '%s\n' "$REGISTRY/examxv2-frontend:$IMAGE_TAG" > frontend_image_tag.txt
+          printf '%s\n' "$COMMIT_MESSAGE" > commit_message.txt
+          printf '%s\n' "$REPO_COMMIT_SHA" > commit_sha.txt
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -229,7 +234,7 @@ jobs:
           git config --local user.email "hariharen@greatify.ai"
           git config --local user.name "Hariharen"
           git add k8s/overlays/stg/kustomization.yaml
-          git commit -m "Update image tags for stg deployment - ${COMMIT_MESSAGE}"
+          git commit -m "Update image tags for stg deployment - $(printf '%s' "$COMMIT_MESSAGE")"
           git push origin main
 
       # - name: Push to protected branch
